Feat: Add plugin generator

--- a/templates/plugin/plugin.xml
+++ b/templates/plugin/plugin.xml
@@ -12,6 +12,7 @@
 
 	<files>
 		<filename plugin="{{ lowerCase pluginName }}">{{ lowerCase pluginName }}.php</filename>
+		<filename>index.html</filename>
 	</files>
 
 	<languages folder="language">
