Feat: Component add support for backend - form view backend - list view frontend - form view frontend - list view

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "joomla-extensions-generator-using-plop",
+  "license": "UNLICENSED",
+  "repository": "https://github.com/manojLondhe/joomla-extensions-generator",
   "devDependencies": {
     "inquirer-directory": "^2.1.0",
     "plop": "^2.5.3"
